# toy-play-web3-rust

./: .gitignore  Cargo.toml  README.md  envrc-sample
crates/amm/: Cargo.toml
crates/amm/src/: main.rs
crates/arbitrage/: Cargo.toml  config.rs
crates/arbitrage/src/: amm_interactor.rs  arbitrage_detector.rs  config.rs  ethereum_client.rs  main.rs
crates/ecc/: Cargo.toml
crates/ecc/src/: main.rs
crates/keccak/: Cargo.toml
crates/keccak/src/: main.rs
crates/merkle/: Cargo.toml  ethereum_merkle.dot
crates/merkle/src/: main.rs
crates/mpt/: Cargo.toml
crates/mpt/src/: main.rs
crates/sim/: Cargo.toml
crates/sim-by-anvil/: Cargo.toml  SimpleFlashLoan.sol
crates/sim-by-anvil/src/: main.rs
crates/sim/src/: main.rs
