[package]
name = "arbitrage"
version = "0.1.0"
edition = "2024"

[dependencies]
alloy = { version = "1.0.6", features = ["full"] }
alloy-contract = { version = "1.0.6", features = ["pubsub"] }
alloy-sol-types = "1.1.2"
dotenvy = "0.15.7"
eyre = "0.6.12"
futures-util = "0.3.31"
hex = "0.4.3"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
tokio = { version = "1.45.0", features = ["full"] }
url = "2.5.4"
